[package]
name = "http-intercept"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
colored = "2.0.0"
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.28.0", features = ["full"] }
